--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ button {
     background-color: var(--head-btn-back);
     padding: 12px 25px;
     margin-top: 2rem;
-    border: 2px solid #fff;
+    border: 2px solid var(--head-btn-back);
     border-radius: 25px;
     text-align: center;
     font-family: 'Lexend Deca', sans-serif;
@@ -24,7 +24,7 @@ button {
 button:hover {
     background: transparent;
     color: var(--head-btn-back);
-    border: 2px solid #fff;
+    border: 2px solid var(--head-btn-back);
 }
 
 .btn-sedan {
@@ -89,12 +89,16 @@ button:hover {
 }
 
 @media screen and (max-width: 450px) {
+    .container {
+        place-content: unset;
+    }
+
     .transport {
         grid-template-columns: 1fr;
         width: 80%;
         margin: 2rem auto;
     }
-    
+
     .sedan {
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
